# mms2-tickrate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
cmake/: any_config.cmake  dynlibutils.cmake  gamedata.cmake  logger.cmake  metamod.cmake  sourcesdk.cmake  translations.cmake
cmake/platform/: shared.cmake
configs/: languages.json
gamedata/: gameresource.games.json  gamesystem.games.json  hostframe.games.json  source2server.games.json  tick.games.json
include/: concat.hpp  globals.hpp  sample_plugin.hpp  tickrate_plugin.hpp
include/sample/: chat_command_system.hpp  provider.hpp
include/tickrate/: chat_command_system.hpp  provider.hpp
public/: isample.hpp  itickrate.hpp
src/: concat.cpp  globals.cpp  sample_plugin.cpp  tickrate_plugin.cpp
src/sample/: chat_command_system.cpp  provider.cpp
src/sample/provider/gamedata/: gameresource.cpp  gamesystem.cpp  source2server.cpp
src/tickrate/: chat_command_system.cpp  provider.cpp
src/tickrate/provider/gamedata/: gameresource.cpp  gamesystem.cpp  hostframe.cpp  source2server.cpp  tick.cpp
translations/: sample.phrases.json  tickrate.phrases.json
